# nextcloud_appstore

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: error.rs  lib.rs  models.rs
